--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <version>2.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>2.20.0</version>
+        </dependency>
 
     </dependencies>
 
