--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
+            <artifactId>wiremock-standalone</artifactId>
             <version>2.20.0</version>
         </dependency>
 
