--- a/pom.xml
+++ b/pom.xml
@@ -23,22 +23,29 @@
         <mainClass>com.github.phillbarber.App</mainClass>
     </properties>
 
-    <!--<dependencyManagement>-->
-        <!--<dependencies>-->
-            <!--<dependency>-->
-                <!--<groupId>io.dropwizard</groupId>-->
-                <!--<artifactId>dropwizard-bom</artifactId>-->
-                <!--<version>${dropwizard.version}</version>-->
-                <!--<type>pom</type>-->
-                <!--<scope>import</scope>-->
-            <!--</dependency>-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-bom</artifactId>
+                <version>${dropwizard.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
 
-        <!--</dependencies>-->
-    <!--</dependencyManagement>-->
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
-
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+        </dependency>
 
 
         <!-- TEST -->
@@ -57,7 +64,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
+            <artifactId>wiremock-standalone</artifactId>
             <version>2.20.0</version>
         </dependency>
 
