Some more client cert fun.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,10 +2,14 @@ logging:
   level: INFO
   loggers:
     com.github.phillbarber: DEBUG
-#server:
-#  applicationConnectors:
-#    - type: https
-#      port: 8443
-#      keyStorePath: /home/pergola/dev-workspace/dropwizard-https-example/target/keys/remote-server/5-keystore.pkcs12
-#      keyStorePassword: abcdefg
-#      keyStoreType: PKCS12
+server:
+  applicationConnectors:
+    - type: https
+      port: 8443
+      keyStorePath: /home/pergola/dev-workspace/dropwizard-https-example/target/keys/server/5-keystore.pkcs12
+      keyStorePassword: abcdefg
+      keyStoreType: PKCS12
+      trustStorePath: /home/pergola/dev-workspace/dropwizard-https-example/target/keys/client/5-keystore.pkcs12
+      trustStorePassword: abcdefg
+      trustStoreType: PKCS12
+      needClientAuth: true
